# dmosi-proc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: dmosi_proc.c
tests/: CMakeLists.txt  main.c  main.ld
